--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<!DOCTYPE html><html lang="en"><head><base href="/"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Welcome to angular-seed!</title><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/assets/favicon/favicon-PROD.ico" type="image/x-icon"><link rel="stylesheet" href="/css/main.css?1522438493579"></head><body><sd-app>Loading...</sd-app><script defer="defer">!function(e,a,t,n,g,c,o){e.GoogleAnalyticsObject=g,e.ga=e.ga||function(){(e.ga.q=e.ga.q||[]).push(arguments)},e.ga.l=1*new Date,c=a.createElement(t),o=a.getElementsByTagName(t)[0],c.async=1,c.src="https://www.google-analytics.com/analytics.js",o.parentNode.insertBefore(c,o)}(window,document,"script",0,"ga"),ga("create","UA-XXXXXXXX-X","auto"),ga("send","pageview")</script><script>function module(){}</script><script src="/js/shims.js?1522438493576"></script><script src="/js/app.js?1522438493577"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <base href="/">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Welcome to angular-seed!</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/assets/favicon/favicon-DEV.ico" type="image/x-icon">
+
+  <!-- inject:css -->
+  <link rel="stylesheet" href="/css/main.css?1522438185014">
+  <!-- endinject -->
+</head>
+<body>
+
+  <sd-app>Loading...</sd-app>
+
+  <script defer>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-XXXXXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
+
+  <script>
+  // Fixes undefined module function in SystemJS bundle
+  function module() {}
+  </script>
+
+  <!-- shims:js -->
+  <script src="/node_modules/core-js/client/shim.min.js?1522438185008"></script>
+  <script src="/node_modules/intl/dist/Intl.min.js?1522438185009"></script>
+  <script src="/node_modules/systemjs/dist/system.src.js?1522438185010"></script>
+  <!-- endinject -->
+
+  
+  <script src="/system-config.js"></script>
+  
+
+  <!-- libs:js -->
+  <script src="/node_modules/zone.js/dist/zone.js?1522438185012"></script>
+  <script src="/node_modules/zone.js/dist/long-stack-trace-zone.js?1522438185013"></script>
+  <script src="/node_modules/.tmp/Rx.min.js?1522438185013"></script>
+  <!-- endinject -->
+
+  <!-- inject:js -->
+  <!-- endinject -->
+
+  
+  <script>
+  System.import('app/main')
+    .catch(function (e) {
+      console.error(e.stack || e,
+        'Not expecting this error? Report it at https://github.com/mgechev/angular-seed/issues');
+    });
+  </script>
+  
+
+</body>
+</html>
