--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="index.css">
-    <meta charset=UTF-8>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hayden Sookchand</title>
-    <base href="/">
-  </head>
-  <body>
-   
-   
-    <app>
-      Loading...
-    </app>
-
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>MyApp</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.a328b355b341e5597046.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.b6aeb0158191ab831228.bundle.js"></script><script type="text/javascript" src="polyfills.7e86b43c0d0deb65edcb.bundle.js"></script><script type="text/javascript" src="main.61a07e9fdc8301bc58fc.bundle.js"></script></body></html>
