--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="index.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Hayden Sookchand</title><base href="/"><link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.bbab08078650af07c6db.bundle.css" rel="stylesheet"/></head><body background="https://rawgit.com/HaydenSookchand/mysite/master/assets/bg5.jpg"><div id="container" style="width:100%;height:500px;"><div id="profile-card"><div id="profile-pic"></div><div id="profile-bio"></div></div><app-root style="position: relative;top: 200px;">Loading...</app-root></div><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.d0174ccc5f289fd9fe39.bundle.js"></script><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.101a641b12da2edd6c5d.bundle.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Hayden Sookchand</title>
+  <base href="/">
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.68981a449b9f646b9cba.bundle.css" rel="stylesheet"/>
+</head>
+<body background="assets/bg5.jpg" style="height: 100%;
+  width: 100%;
+  position: absolute;">
+  <div id="container" style="overflow-y: hidden;
+      width: 100%;
+      height: 100%;">
+      <div id="profile-card">
+        <div id="profile-pic">
+
+      </div>
+      <div id="profile-bio">
+
+      </div>
+    </div>
+      <app-root style="position: relative;top: 180px;">Loading...</app-root>
+    </div>
+      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.19db75b6175aef39a268.bundle.js">
+      </script>
+      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js">
+      </script>
+      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.fee5c9f30602e65b2756.bundle.js">
+      </script>
+    </body>
+      </html>
