--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <base href="/">
   <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.68981a449b9f646b9cba.bundle.css" rel="stylesheet"/>
 </head>
-<body background="assets/bg5.jpg" style="height: 100%;
+<body background="https://rawgit.com/HaydenSookchand/mysite/master/assets/bg5.jpg" style="height: 100%;
   width: 100%;
   position: absolute;">
   <div id="container" style="overflow-y: hidden;
