--- a/index.html
+++ b/index.html
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Hayden Sookchand</title>
-  <base href="/">
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.68981a449b9f646b9cba.bundle.css" rel="stylesheet"/>
-</head>
-<body background="https://rawgit.com/HaydenSookchand/mysite/master/assets/bg5.jpg" style="height: 100%;
+<!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="index.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Hayden Sookchand</title><base href="/"><link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.0b63127958f570766728.bundle.css" rel="stylesheet"/></head><body background="https://rawgit.com/HaydenSookchand/mysite/master/assets/bg1.jpg" style="height: 100%;
   width: 100%;
-  position: absolute;">
-  <div id="container" style="overflow-y: hidden;
+  position: absolute;"><div id="container" style="overflow-y: hidden;
       width: 100%;
-      height: 100%;">
-      <div id="profile-card">
-        <div id="profile-pic">
-
-      </div>
-      <div id="profile-bio">
-
-      </div>
-    </div>
-      <app-root style="position: relative;top: 180px;">Loading...</app-root>
-    </div>
-      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.19db75b6175aef39a268.bundle.js">
-      </script>
-      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js">
-      </script>
-      <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.fee5c9f30602e65b2756.bundle.js">
-      </script>
-    </body>
-      </html>
+      height: 100%;"><div id="profile-card"><div id="profile-pic"></div><div id="profile-bio"></div></div><app-root style="position: relative;top: 180px;">Loading...</app-root></div><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.6c00c519e51451e92940.bundle.js"></script><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script><script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.0a23acc426e006b8b3bd.bundle.js"></script></body></html>
