--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hayden Sookchand</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script type="text/javascript">images = ['https://rawgit.com/HaydenSookchand/mysite/master/assets/bg1.jpg', 'https://rawgit.com/HaydenSookchand/mysite/master/assets/cover.png']
+  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/bg1.jpg', 'https://rawgit.com/HaydenSookchand/mysite/master/assets/cover.png']
     preloadImage();
 
     function preloadImage(url) {
