--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.9c9eb987efc551f3c111.bundle.css" rel="stylesheet" />
 </head>
 
-<body id="body" background="https://rawgit.com/HaydenSookchand/mysite/master/assets/bg1.jpg">
+<body id="body" background="https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/bg1.jpg">
   <div id="container">
     <div id="profile-card">
       <div id="profile-pic"></div>
