changing bg image to css and plain color

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hayden Sookchand</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.3/pixi.js"></script>
   <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/bg1.jpg', 'https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
     preloadImage();
 
@@ -16,10 +17,10 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.9c9eb987efc551f3c111.bundle.css" rel="stylesheet" />
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.bfae92054c31961561cd.bundle.css" rel="stylesheet" />
 </head>
 
-<body id="body" style="background-color:#448aff">
+<body id="body">
   <div id="container">
     <div id="profile-card">
       <div id="profile-pic"></div>
@@ -27,14 +28,12 @@
       <div id="profile-name" style="margin:auto">Hayden Sookchand</div>
     </div>
     <app-root style="position: relative;top: 180px;">
-      <div class="loading">
-        <h1>Loading...</h1>
-      </div>
+      <h1>Loading...</h1>
     </app-root>
   </div>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.34ce915ba17bc0496d1b.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.9a4d30dcc55d18e8bc67.bundle.js"></script>
   <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.901bd3ffac07b94b1380.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.ff69ae0b4c35a8d8a6b8.bundle.js"></script>
 </body>
 
 </html>
