--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.3/pixi.js"></script>
-  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/bg1.jpg', 'https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
+  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/cover.png']
     preloadImage();
 
     function preloadImage(url) {
@@ -17,7 +17,7 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.bfae92054c31961561cd.bundle.css" rel="stylesheet" />
+  <link href="shttps://rawgit.com/HaydenSookchand/mysite/master/styles.bfae92054c31961561cd.bundle.css" rel="stylesheet" />
 </head>
 
 <body id="body">
