--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="shttps://rawgit.com/HaydenSookchand/mysite/master/styles.bfae92054c31961561cd.bundle.css" rel="stylesheet" />
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.bfae92054c31961561cd.bundle.css" rel="stylesheet" />
 </head>
 
 <body id="body">
