--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hayden Sookchand</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
-  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
+  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/ assets/cover.png']
     preloadImage();
 
     function preloadImage(url) {
@@ -17,7 +17,7 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.6140d9790baa29c70a56.bundle.css" rel="stylesheet" />
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.a0b372fcbbe0664002cf.bundle.css" rel="stylesheet" />
 </head>
 
 <body id="body">
@@ -30,9 +30,9 @@
       <h1>Loading...</h1>
     </app-root>
   </div>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.cab65c6d9b92e64890ea.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.0a34168081cf00be3c25.bundle.js"></script>
   <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.2561cc30c2bffbd6cfee.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.0b4073bb329b28e7fe46.bundle.js"></script>
 </body>
 
 </html>
