--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Hayden Sookchand</title>
-  <base href="./index.html/">
+  <base href="./index.html">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
   <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/ assets/cover.png']
     preloadImage();
