--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <base href="/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Hayden Sookchand</title>
-  <base href="/">
+  <base href="./index.html">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
-  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/ assets/cover.png']
+  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
     preloadImage();
 
     function preloadImage(url) {
@@ -30,9 +29,9 @@
       <h1>Loading...</h1>
     </app-root>
   </div>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.0a34168081cf00be3c25.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.5e77b00c60645c8d2dd4.bundle.js"></script>
   <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.0b4073bb329b28e7fe46.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.3b2519743706a49bb9d6.bundle.js"></script>
 </body>
 
 </html>
