--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Hayden Sookchand</title>
   <base href="./index.html">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
   <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
     preloadImage();
@@ -17,22 +17,16 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.a0b372fcbbe0664002cf.bundle.css" rel="stylesheet" />
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.85bb68fe9373f0ee7c66.bundle.css" rel="stylesheet" />
 </head>
 
 <body id="body">
-  <div id="container">
-    <div id="profile-card">
-      <div id="profile-pic"></div>
-      <div id="profile-name" style="margin:auto">Hayden Sookchand</div>
-    </div>
-    <app-root style="position: relative;top: 180px;">
-      <h1>Loading...</h1>
-    </app-root>
-  </div>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.5e77b00c60645c8d2dd4.bundle.js"></script>
+  <app-root class="app-root">
+    <h1>Loading...</h1>
+  </app-root>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.127387926fd8297716da.bundle.js"></script>
   <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.3b2519743706a49bb9d6.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.322768f662962933d1e1.bundle.js"></script>
 </body>
 
 </html>
