putting my site back

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <base href="./index.html">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
-  <script type="text/javascript">images = ['assets/cover.png']
+  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
     preloadImage();
 
     function preloadImage(url) {
@@ -17,16 +17,16 @@
         this.img.src = images[a];
       }
     }</script>
-  <link href="https://rawgit.com/HaydenSookchand/me/master/styles.e4660ce84bdc3c158f32.bundle.css" rel="stylesheet" />
+  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.f374902508a6c01691d3.bundle.css" rel="stylesheet" />
 </head>
 
 <body id="body">
   <app-root class="app-root">
     <h1>Loading...</h1>
   </app-root>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/me/master/inline.3eb97ca19e8dba5ca13c.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/me/master/polyfills.8d9de6671bb7dfeae789.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/me/master/main.4795348c1a0fcc1f1962.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.7c5befb9a3f72e293c3c.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.46c4ffb89f7aa3a6ac0c.bundle.js"></script>
 </body>
 
 </html>
