--- a/index.html
+++ b/index.html
@@ -2,31 +2,29 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Hayden Sookchand</title>
-  <base href="./index.html">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
-  <script type="text/javascript">images = ['https://raw.githubusercontent.com/HaydenSookchand/mysite/master/assets/cover.png']
-    preloadImage();
+    <meta charset=UTF-8>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hayden Sookchand</title>
+    <base href="./index.html">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tajawal" rel="stylesheet">
+    <script type="text/javascript">
+        images = ['assets/cover.png']
+        preloadImage();
 
-    function preloadImage(url) {
-      for (var a; a <= images.length; a++) {
-        this.img = new Image();
-        this.img.src = images[a];
-      }
-    }</script>
-  <link href="https://rawgit.com/HaydenSookchand/mysite/master/styles.f374902508a6c01691d3.bundle.css" rel="stylesheet" />
+        function preloadImage(url) {
+            for (var a; a <= images.length; a++) {
+                this.img = new Image();
+                this.img.src = images[a];
+            }
+        }
+    </script>
 </head>
 
 <body id="body">
-  <app-root class="app-root">
-    <h1>Loading...</h1>
-  </app-root>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/inline.7c5befb9a3f72e293c3c.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/polyfills.7e86b43c0d0deb65edcb.bundle.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/HaydenSookchand/mysite/master/main.46c4ffb89f7aa3a6ac0c.bundle.js"></script>
-</body>
+    <app-root class="app-root">
+        <h1></h1>
+    </app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
